[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/people_group/PoepleGroup.gd" type="Script" id=1]
[ext_resource path="res://sprites/fight_cloud.png" type="Texture" id=2]
[ext_resource path="res://sprites/Npc_2_idle.png" type="Texture" id=3]
[ext_resource path="res://sprites/Npc_all_back.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.8333
height = 17.4088

[sub_resource type="Animation" id=2]
resource_name = "fight"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.00741005, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.3056

[node name="PoepleGroup" type="Area2D"]
script = ExtResource( 1 )
detail = "Make fight"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 28.014 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fight = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Group" type="YSort" parent="."]
visible = false

[node name="Person1" type="Sprite" parent="Group"]
position = Vector2( -8, 3 )
texture = ExtResource( 3 )
hframes = 2

[node name="Person2" type="Sprite" parent="Group"]
position = Vector2( 10, 8 )
texture = ExtResource( 3 )
hframes = 2

[node name="Person3" type="Sprite" parent="Group"]
position = Vector2( -1.82691, 19.5158 )
texture = ExtResource( 4 )
hframes = 8

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"Bounds",
]]

[node name="BumbCol" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.166084, 28.068 )
rotation = 1.57079
shape = SubResource( 3 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.249119, 28.068 )
scale = Vector2( 2.42001, 2.22901 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
